mule-user-guide/v/3.5/global-elements.adoc
= 全球元素
:keywords: studio, server, components, connectors, elements, palette, global elements, configuration elements

image:global.png[全球]在Mule中，*Global Element*是一次只配置一次，然后从多个流中的元素多次引用。您可以创建一个全局元素来详细说明您的配置或传输细节，而不是重复编写相同的代码以将相同的配置应用于流中的多个元素。然后，您可以指示Mule应用程序中跨流的任意数量的元素，以引用全局元素以了解有关如何操作的细节。

*  *Global elements provide flexibility.*
元素可以完全按照定义应用全局元素的配置，或者可以通过修改来增强全局配置。

*  *Global elements are reusable.*
您可以只配置一次全局元素，然后在相同类型的构建块之间共享该配置。当您必须为外部资源（例如SaaS应用程序或数据库）定义连接详细信息和登录凭据时，这非常有用。

*  *Global elements offer efficiency.*
在许多构建块中多次更改相同的配置，而不是在“主”中更改一次配置，然后Studio将更改应用于引用它的所有变更。

== 假设

本文档假定您熟悉 link:/anypoint-studio/v/5/index[Anypoint Studio Essentials]文档以了解有关使用Mule图形用户界面进行开发的更多信息。

== 创建全局元素

某些元素的配置需要对全局元素的引用。例如，某些消息源必须引用全局连接器配置才能运行。然而，大多数元素仅仅是为了便利和效率而使用全球元素。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. In the visual editor, click the *Global Elements* tab at the base of the canvas to access a list of all global elements in an application.
+
image:GEtab.png[GEtab]
+
. Click *Create* to add a new global element.
+
image:GEcreate.png[GEcreate]
+
. In the *Choose Global Type* wizard, navigate the directories or use the filter to select the type of global element you wish to create, then click OK. 
+
image:chooseglobaltype.png[chooseglobaltype]
+
. Define the configurable parameters of your global element, then click *OK* to save.
. To configure a local element in flow to reference a global element, use the drop-down menu next to the *Connector Configuration*, *Connector Endpoint*, or other reference field to select a global element from a list of those you have created. 
+
image:connectorconfiguration.png[connectorconfiguration]
+
[TIP]
====
You can create a new global element from within a local element in your flow.

Click the plus icon next to the *Connector Configuration*, *Connector Endpoint*, or other reference field, then follow the steps above to configure a global element. Click the edit icon to edit an existing global element.

image:createvsedit.png[createvsedit]
====
....
[tab,title="XML Editor or Standalone"]
....
. In the XML Editor in Studio, or in your XML config file, create a global element _above and outside_ any flows within your application.
. Define the values of attributes associated with the type of global element you added (see Examples below).
. To configure an element in flow to reference a global element, add a `config-ref` or `connector-ref` attribute to the element. The example below includes a global Salesforce element (`sfdc:config`), and a flow which includes a Salesforce connector (`sfdc:create`) that references the global Salesforce element.

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper"
xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc" xmlns:file="http://www.mulesoft.org/schema/mule/file"
xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd 
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd 
http://www.mulesoft.org/schema/mule/sfdc http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd 
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd 
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
 
    <sfdc:config name="Salesforce1" username="username" password="password"  doc:name="Salesforce" securityToken="IQZjCdweSF45JD90Me2BWLLVDo">
        <sfdc:connection-pooling-profile initialisationPolicy="INITIALISE_ONE" exhaustedAction="WHEN_EXHAUSTED_GROW"/>
    </sfdc:config>
 
    <flow name="Contacts_to_SFDC" doc:name="Contacts_to_SFDC">
        ...
        <sfdc:create config-ref="Salesforce1" type="" doc:name="Salesforce Connector">
            <sfdc:objects ref="#[payload]"/>
        </sfdc:create>
    </flow>
 
</mule>
----
....
------

== 安全管理器全局元素的名称属性

尽管Mule运行时不需要安全管理器全局元素的`name`属性，但现在在6.0.0版本的Anypoint Studio中是必需的。
如果您在Anypoint Studio中手动编写代码，请务必在安全管理器元素上定义`name`属性以抑制Studio可能报告的错误。

== 示例

===  JDBC连接器

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:jdbc-ee="http://www.mulesoft.org/schema/mule/ee/jdbc" xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans
http://www.springframework.org/schema/beans/spring-beans-current.xsd 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd 
http://www.mulesoft.org/schema/mule/ee/jdbc http://www.mulesoft.org/schema/mule/ee/jdbc/current/mule-jdbc-ee.xsd">
 
    <jdbc-ee:mysql-data-source name="MySQL_Data_Source" user="test" password="test" url="jdbc:mysql://localhost:3306/[dbName]" transactionIsolation="UNSPECIFIED" doc:name="MySQL Data Source"/>
 
    <jdbc-ee:connector name="Database_Connector" dataSource-ref="MySQL_Data_Source" validateConnections="true" queryTimeout="-1" pollingFrequency="0" doc:name="Database"/>
 
    <flow name="myNewProjectFlow1" doc:name="myNewProjectFlow1">
        <jdbc-ee:inbound-endpoint queryKey="test" queryTimeout="-1" pollingFrequency="1000" connector-ref="Database_Connector" doc:name="Database">
            <jdbc-ee:query key="test" value="test"/>
        </jdbc-ee:inbound-endpoint>
    </flow>
 
</mule>
----

===  JMS连接器

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:jms="http://www.mulesoft.org/schema/mule/jms" xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans
http://www.springframework.org/schema/beans/spring-beans-current.xsd 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd 
http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/current/mule-jms.xsd">
 
    <jms:activemq-connector name="Active_MQ" username="test" password="test" brokerURL="tcp://localhost:61616" validateConnections="true" doc:name="Active MQ"/>
 
    <flow name="myNewProjectFlow1" doc:name="myNewProjectFlow1">
        <jms:inbound-endpoint queue="test" connector-ref="Active_MQ" doc:name="JMS Endpoint"/>
    </flow>
 
</mule>
----

== 另请参阅

*  *NEXT STEP:*使用您学习的内容跟随 link:/anypoint-studio/v/6/basic-studio-tutorial[基本工作室教程]。
